--- a/ansible/roles/master/tasks/00_install_control_plane.yml
+++ b/ansible/roles/master/tasks/00_install_control_plane.yml
@@ -26,6 +26,11 @@
         mode: 0600
       when: is_first_master
 
+    - name: Wait 60 seconds before continuing
+      pause:
+        seconds: 60
+      when: is_first_master
+
     - name: Run the kubeadm command and filter the output with grep
       shell: |
         kubeadm init phase upload-certs --upload-certs 2>&1 | grep -P '^[a-fA-F0-9]{64}$'
@@ -38,15 +43,20 @@
         cert_key: "{{ kube_cert.stdout }}"
       when: is_first_master
 
-    - name: Wait 15 seconds before continuing
+    - name: Wait 100 seconds before continuing
       pause:
-        seconds: 15
+        seconds: 100
       when: is_first_master
 
     - name: Apply Calico as CNI plugin
       shell: |
         kubectl apply -f https://raw.githubusercontent.com/projectcalico/calico/v3.26.1/manifests/calico.yaml
       become_user: "{{ ansible_user_id }}"
+      when: is_first_master
+
+    - name: Wait  seconds before continuing
+      pause:
+        seconds: 30
       when: is_first_master
     
     - name: Generate join token on the first master
@@ -61,5 +71,24 @@
 
     - name: Unir nodos masters secundarios al cluster
       shell: "{{ hostvars[groups['k8-masters'][0]].join_command }} --control-plane --certificate-key {{ hostvars[groups['k8-masters'][0]].cert_key }}"
+      when: not is_first_master
+
+    - name: Create a .kube directory in the current user's home page in other masters
+      file:
+        path: "/home/{{ ansible_user_id }}/.kube"
+        state: directory
+        owner: "{{ ansible_user_id }}"
+        group: "{{ ansible_user_id }}"
+        mode: 0755
+      when: not is_first_master
+
+    - name: Copy the admin.conf to ~/.kube/config in other masters
+      copy:
+        src: /etc/kubernetes/admin.conf
+        dest: "/home/{{ ansible_user_id }}/.kube/config"
+        remote_src: yes
+        owner: "{{ ansible_user_id }}"
+        group: "{{ ansible_user_id }}"
+        mode: 0600
       when: not is_first_master
     
