--- a/ansible/roles/common/tasks/00-check-ping.yml
+++ b/ansible/roles/common/tasks/00-check-ping.yml
@@ -1,6 +1,6 @@
 ---
-- name: Change the hostname and modify the /etc/hosts file
+- name: Ping hosts to test connectivity
   block:
 
-    - name: Hacer ping a los hosts
+    - name: Ping the hosts
       ansible.builtin.ping:
