--- a/ansible/roles/common/vars/repo_vars.yml
+++ b/ansible/roles/common/vars/repo_vars.yml
@@ -1,4 +1,4 @@
 k8_32_gpg_deb: "https://pkgs.k8s.io/core:/stable:/v1.32/deb/Release.key"
-k8_32_repo_deb: "https://pkgs.k8s.io/core:/stable:/v1.31/deb/ /"
+k8_32_repo_deb: "https://pkgs.k8s.io/core:/stable:/v1.32/deb/ /"  # K8 for Ubuntu 22.04
 docker_gpg: "https://download.docker.com/linux/ubuntu/gpg"
-docker_repo: "https://download.docker.com/linux/ubuntu jammy stable"
+docker_repo: "https://download.docker.com/linux/ubuntu jammy stable" # Docker for ubuntu 22.04
