--- a/new_ansible/roles/common/vars/main.yml
+++ b/new_ansible/roles/common/vars/main.yml
@@ -11,9 +11,14 @@ k8_33_pkg_deb: "https://pkgs.k8s.io/core:/stable:/v1.33/deb/ /" # Kubernetes 1.3
 k8_32_pkg_deb: "https://pkgs.k8s.io/core:/stable:/v1.32/deb/ /" # Kubernetes 1.32
 k8_31_pkg_deb: "https://pkgs.k8s.io/core:/stable:/v1.31/deb/ /" # Kubernetes 1.31
 
-
+#Docker GPG Key in Debian Distribution
 docker_gpg_ubuntu: "https://download.docker.com/linux/ubuntu/gpg"
 docker_gpg_debian: "https://download.docker.com/linux/debian/gpg"
 
 
 docker_repo: "https://download.docker.com/linux/ubuntu jammy stable" # Docker for ubuntu 22.04
+
+#Kubernetes Package Repository
+k8_33_pkg_rh: "https://pkgs.k8s.io/core:/stable:/v1.33/rpm/"
+k8_32_pkg_rh: "https://pkgs.k8s.io/core:/stable:/v1.32/rpm/"
+k8_31_pkg_rh: "https://pkgs.k8s.io/core:/stable:/v1.31/rpm/"
