Delete inventory file, change ansible.cfg and translate a comment in 02-repo-config-rh.yml

--- a/new_ansible/ansible.cfg
+++ b/new_ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = inventory.ini
-remote_user = scarmona
+remote_user = # Set your username
 host_key_checking = False
 roles_path = ./roles
 
