--- a/new_ansible/ansible.cfg
+++ b/new_ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = inventory.ini
-remote_user = # Set your username
+remote_user = #Set for your username
 host_key_checking = False
 roles_path = ./roles
 
