feature:Add rules for the workers machines with ansible and create a provisional inventory to test ansible

--- a/new_ansible/ansible.cfg
+++ b/new_ansible/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 inventory = inventory.ini
-remote_user = #Set for your username
+#Set for your username
+remote_user = scarmona
 host_key_checking = False
 roles_path = ./roles
 
