--- a/new_ansible/roles/common/tasks/main.yml
+++ b/new_ansible/roles/common/tasks/main.yml
@@ -24,3 +24,6 @@
 - name: Include task to allow Kubernetes Ports in Workers
   ansible.builtin.include_tasks: 04-allow-ports-worker.yml
   when: "'k8-workers' in group_names"
+
+- name: Include task to install required tools
+  ansible.builtin.include_tasks: 05-install-tools.yml
