--- a/new_ansible/roles/runtime/tasks/main.yml
+++ b/new_ansible/roles/runtime/tasks/main.yml
@@ -1,3 +1,2 @@
-#SPDX-License-Identifier: MIT-0
----
-# tasks file for runtime
+- name: Include task to install runtime
+  ansible.builtin.include_tasks: 00-configure-runtime.yml
