feature:Create the k8s rol to install kubernetes tools in hosts

--- a/new_ansible/roles/k8s/tasks/main.yml
+++ b/new_ansible/roles/k8s/tasks/main.yml
@@ -1,3 +1,2 @@
-#SPDX-License-Identifier: MIT-0
----
-# tasks file for k8s
+- name: Installing necessary kubernetes tools
+  ansible.builtin.include_tasks: 00-configure-k8.yml
