feature:Add the master nodes playbook

--- a/new_ansible/playbooks/02-configure-nodes.yml
+++ b/new_ansible/playbooks/02-configure-nodes.yml
@@ -4,7 +4,7 @@
   roles:
     - master
 
-- name: Join workers to the cluster
-  hosts: k8-workers
-  roles:
-    - workers
+# - name: Join workers to the cluster
+#   hosts: k8-workers
+#   roles:
+#     - workers
