--- a/new_ansible/roles/master/tasks/main.yml
+++ b/new_ansible/roles/master/tasks/main.yml
@@ -1,3 +1,6 @@
-#SPDX-License-Identifier: MIT-0
----
-# tasks file for master
+- name: Load variables from hosts_vars.yml
+  include_vars:
+    file: "../vars/main.yml"
+
+- name: Add task install control plane
+  ansible.builtin.include_tasks: 00-install-control-plane.yml
