feautre:Operative configuration in Redhat System

--- a/ansible/roles/common/tasks/03_disable_swap_memory.yml
+++ b/ansible/roles/common/tasks/03_disable_swap_memory.yml
@@ -12,3 +12,6 @@
     - name: Run mount command to apply changes
       ansible.builtin.command:
         cmd: mount -a              # Re-mounts filesystems according to /etc/fstab, applying the changes
+    
+    - name: Reboot after modifying SELinux
+      ansible.builtin.reboot:
