--- a/new_ansible/playbooks/02-configure-nodes.yml
+++ b/new_ansible/playbooks/02-configure-nodes.yml
@@ -1,10 +1,9 @@
----
 - name: Install the control plane
   hosts: k8-masters
   roles:
     - master
 
-# - name: Join workers to the cluster
-#   hosts: k8-workers
-#   roles:
-#     - workers
+- name: Join workers to the cluster
+  hosts: k8-workers
+  roles:
+    - worker
