Delete Directories not used

--- a/new_ansible/inventory.ini
+++ b/new_ansible/inventory.ini
@@ -1,6 +1,6 @@
 [k8-masters]
-192.168.18.210 env=k32
-192.168.18.220 env=k32
+192.168.18.110 env=k32 os=ubuntu
+192.168.18.120 env=k32 os=ubuntu
 
 [k8-workers]
-192.168.18.230 env=k32
+192.168.18.130 env=k32 os=ubuntu
