--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 inventory = inventory.ini
+#Set for your username
 remote_user = ubuntu
 host_key_checking = False
 roles_path = ./roles
