--- a/ansible/roles/master/tasks/00-install-control-plane.yml
+++ b/ansible/roles/master/tasks/00-install-control-plane.yml
@@ -24,15 +24,15 @@
 - name: Create configuration file from template
   ansible.builtin.template:
     src: kubeadm-config.j2
-    dest: /home/scarmona/kubeadm-config.yml
-    owner: scarmona
-    group: scarmona
+    dest: "/home/{{ ansible_user_id }}/kubeadm-config.yml"
+    owner: "{{ ansible_user_id }}"
+    group: "{{ ansible_user_id }}"
     mode: '0644'
   when: is_first_master
 
 - name: Run kubeadm init only on the first node
   shell: |
-    kubeadm init --config /home/scarmona/kubeadm-config.yml
+    kubeadm init --config /home/{{ ansible_user_id }}/kubeadm-config.yml
   when: is_first_master
   register: kubeadm_output
 
